--- a/project-01-springboot-02-oecc/pom.xml
+++ b/project-01-springboot-02-oecc/pom.xml
@@ -17,10 +17,18 @@
 	<properties>
 		<java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>		
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <postgresql.version>42.2.12</postgresql.version>		
 	</properties>
 
 	<dependencies>
+		
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>${postgresql.version}</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -45,7 +53,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- end::tests[] -->
+		<!-- end::tests[] -->	
 	</dependencies>
 
 	<build>
