--- a/project-01-springboot-02-oecc/src/main/resources/application.properties
+++ b/project-01-springboot-02-oecc/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 url=jdbc:postgresql://server-intercorp-01.postgres.database.azure.com:5432/mypgsqldb?ssl=true&sslmode=require
 user=demo@server-intercorp-01
-password=Oeccoecc$
+password=Oeccoecc01$
